--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Armon Luckenbach",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
